# virtool

./: .codacy.yml  .coveragerc  .deepsource.toml  .dockerignore  .drone.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .prospector.yml  .readthedocs.yaml  .releaserc  .travis.yml  AGENTS.md  Dockerfile  GEMINI.md  Gemfile  LICENSE  Makefile  PROBLEM.md  TODO.md  VERSION  _config.yml  alembic.ini  build.py  conftest.py  contributors.txt  docker-compose.yml  install.sh  jobs_api_process.py  lgtm.yml  mise.toml  package-lock.json  package.json  pyproject.toml  pytest.ini  readme.md  release.py  releases  requirements.txt  run.py  (+1 more)
.claude/: settings.json
.claude/skills/: discovery.md  interview.md  issues.md  plan.md  pr.md
.config/: test.sh  wt.toml
.github/: CODEOWNERS  dependabot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml  ci-4.0.0.yml  ci.yml  nightly.yml  postgres.yml  publish-4.0.0.yml  publish.yml  runner.yaml  test.yml  try-release.yml
assets/: bowtie2-inspect  skewer  virtoold.service  virtoold.sh
assets/alembic/: env.py
assets/example/: fastqc.txt
assets/revisions/: rev_0fhc2sfnpu9v_complete_update_sample_workflows_task_rows.py  rev_0fhc2sfnpu9v_delete_update_sample_workflows_task_rows.py  rev_0p3nhjg1fcfj_ensure_index_files.py  rev_0uwpffz8adx0_purge_orphaned_references.py  rev_1keyha5n6l0j_add_subtractions_field.py  rev_1nl7v191h0ba_copy_analyses_to_postgres.py  rev_1p681ke9wedv_remove_ref_process_field.py  rev_1zg28cpib2uj_populate_sample_workflows_field.py  rev_24ysb9cwjiv1_backfill_samples_subtractions_to_integers.py  rev_2y6jeuxl2q0w_add_job_retries_field.py  rev_31su1xw351h2_copy_api_keys_to_postgres.py  rev_381mcji9pkiw_backfill_sequence_positions.py  rev_3g8rzbqj6k69_rename_pathoscope_bowtie_to_pathoscope.py  rev_3mwt95y6wx5o_drop_groups_mongo_collection.py  rev_4wxjh2cjere5_copy_samples_to_postgres.py  rev_6k51od8ta28a_backfill_nested_user_ids_in_status_and_references.py  rev_6q5k8tz8uph3_add_jobs_ping_field.py  rev_6v3b3vunad16_copy_hmm_annotations_to_postgres.py  rev_7emq1brv0zz6_nest_analysis_results_field.py  rev_9ws3adnisz85_copy_indexes_to_postgres.py  rev_a5hg3lbp6rz1_backfill_embedded_reference_ids_to_integers.py  rev_an1no64kah8t_backfill_legacy_inline_history_diffs_to_postgres.py  rev_b4qhmbisvbn3_backfill_analyses_sample_ids_to_integers.py  rev_b4st1kx9mj2q_backfill_null_index_tasks.py  rev_bfzcj3gxn2dd_backfill_samples_group_ids_to_integers.py  rev_bn8b4pzfvokk_backfill_analyses_index_ids_to_integers.py  rev_e83uz1iz5tw2_copy_users_to_postgres.py  rev_eta57bpbxmn1_re_backfill_subtractions_to_postgres.py  rev_f4md6q93mtud_use_integer_group_ids_in_users.py  rev_g2cecswiq3r2_add_archived_to_references.py  rev_gkdk4xtpkwi2_copy_otus_and_sequences_to_postgres.py  rev_gr5j6jx8ap7f_remove_software_update_status_document.py  rev_i0ljixkr0wxg_use_null_for_unset_analysis_results_fields.py  rev_icp41e0o5dwn_purge_iimi_analyses.py  rev_ie7r3vdaf5mu_backfill_user_ids_to_integers.py  rev_iltemfg2gul8_copy_history_to_postgres.py  rev_io3dep44jtym_set_deleted_field_for_subtraction_documents.py  rev_irulhq4gaihg_compare_sequence_positions.py  rev_jhqn47cauoea_rename_cache_hash_field_to_key.py  rev_jlq24f8q12pk_migrate_nuvs_files.py  (+48 more)
client/: .babelrc  .eslintrc  babel.config.js  doc.json  package-lock.json  package.json  webpack.config.babel.js  webpack.config.js  webpack.production.config.babel.js  webpack.production.config.js  yarn.lock.bck
client/src/: .prettierrc  index.html
doc/: Makefile  conf.py  index.rst  virtool_extension.py
doc/api/: account.rst  genbank.rst  groups.rst  history.rst  hmm.rst  index.rst  jobs.rst  overview.rst  samples.rst  uploads.rst  users.rst  viruses.rst
doc/client/: client.rst
doc/code/: code.rst
doc/installation/: index.rst
doc/manual/: installation.rst  manual.rst  server.rst
doc/server/: application.rst  database.rst  (+8 more)
docker/: Dockerfile  Dockerfile.nuvs  Dockerfile.nuvs.test  Dockerfile.pathoscope  docker-compose.dev.yml  docker-compose.jobs.yml  docker-compose.yml
docs/: Makefile  api.rst  authorization.rst  conf.py  data.rst  how-to.rst  index.rst  reference.rst  sessions.rst  transforms.rst  types.rst
scripts/: add_virus_id_version.py  audit_index_versions.py  build_reference.py  change_password.py  check_legacy_user_ids.py  clear_dev.py  count_default_sequences.py  coverage_simulation.py  database_check.py  find_inequal_isolates.py  find_sequence_list.py  generate_human_fasta.py  isolate_references.py  reduce_library_size.py
static/: base.css  setup.css
templates/: client_path_error.html  error_404.html  error_500.html  login.html  reset.html  setup.html  setup_db.html  setup_finish.html  setup_path.html  setup_proxy.html  setup_restart.html  setup_title.html  setup_user.html
tests/: __init__.py  conftest.py  docker-compose  docker-compose-test  docker-compose.yml  garage-init.sh  garage.toml  pytest.ini  setup_mongo.sh  setup_postgres.sh  test_analyses.py  test_app.py  test_app_settings.py  test_bio.py  test_config.py  test_dispatcher.py  test_fake_next.py  test_file_manager.py  test_files.py  test_fixtures.py  test_flags.py  test_github.py  test_groups.py  test_history.py  test_hmm.py  test_job.py  test_job_manager.py  test_kinds.py  test_logs.py  test_migrate.py  test_nuvs.py  test_nvstat.py  test_organize.py  test_organize_analyses.py  test_organize_files.py  test_organize_hosts.py  test_organize_jobs.py  test_organize_samples.py  test_organize_subtraction.py  test_organize_users.py  (+34 more)
virtool/: __init__.py  analyses.py  analysis.py  api.py  app.py  app_auth.py  app_dispatcher.py  app_init.py  app_routes.py  app_settings.py  args.py  bio.py  blast.py  checks.py  cli.py  collections.py  config.py  data_utils.py  database.py  dispatcher.py  doc.py  error_pages.py  errors.py  example.py  faker.py  file.py  file_manager.py  files.py  flags.py  gen.py  genbank.py  github.py  groups.py  handler_utils.py  handlers_account.py  handlers_analyses.py  handlers_groups.py  handlers_history.py  handlers_hmm.py  handlers_hosts.py  (+86 more)
(+4021 files in other folders)
