[project]
name = "virtool"
description = "Viral infection diagnostics using next-generation sequencing"
requires-python = ">=3.13.7,<3.14"
authors = [
  { name = "Ian Boyes" },
  { name = "Reece Hoffmann" },
  { name = "Aman Monga" },
  { name = "Blake Smith" },
  { name = "Jake Alexander" },
  { name = "Josh Moreira" },
  { name = "Lilly Roberts" },
  { name = "Matthew Curtis" },
  { name = "Naomi Schaufele" },
  { name = "Ryan Fang" },
  { name = "Sebastian Chen" },
  { name = "Tiansheng Sui" },
  { name = "Bryce Davidson" },
  { name = "Christine Wong Chong" },
  { name = "Markus Swoveland" },
]
maintainers = [{ name = "Ian Boyes" }, { name = "Reece Hoffmann" }]
license = "MIT"
version = "0.0.0"
dependencies = [
  "aiohttp[speedups]<4.0,>=3.12",
  "aiohttp-pydantic<2.0.0,>=1.12.1",
  "alembic[tz]<2.0.0,>=1.16.2",
  "arrow<2.0.0,>=1.3.0",
  "asyncpg<1.0.0,>=0.30.0",
  "bcrypt<5.0.0,>=4.0.0",
  "biopython<2.0,>=1.84",
  "Cerberus<2.0.0,>=1.3.4",
  "certifi<2026.0.0,>=2025.6.15",
  "click<9.0.0,>=8.2.1",
  "dictdiffer<1.0.0,>=0.9.0",
  "email-validator<3.0.0,>=2.0.0",
  "faker>=38.2.0",
  "motor<4.0.0,>=3.7.1",
  "openpyxl<4.0.0,>=3.1.5",
  "orjson<4.0.0,>=3.10.18",
  "pydantic==1.10.16",
  "pyyaml<7.0.0,>=6.0.0",
  "semver>=2.13.0,<4.0.0",
  "sentry-sdk<3.0.0,>=2.30.0",
  "sqlalchemy>=2.0.42",
  "structlog-sentry<3.0.0,>=2.1.0",
  "visvalingamwyatt<1.0.0,>=0.1.4",
  "redis<7.0.0,>=6.2.0",
  "enum-tools<1.0.0,>=0.13.0",
  "aiofiles>=24.1.0",
  "pydantic-factories>=1.17.3",
  "pyfixtures>=1.1.0",
]

[project.scripts]
virtool = "virtool.cli:entry"

[project.entry-points.pytest11]
virtool = "virtool.workflow.pytest_plugin"

[tool.pytest.ini_options]
asyncio_mode = "auto"

# Session-scoped event loops required for session-scoped async database connections.
# Async database drivers (asyncpg, motor, redis) create connection pools bound to
# the event loop they're created in and cannot be used across different loops.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

testpaths = ["tests"]
timeout = 10

[tool.ruff]
exclude = [
  "docs",
  ".eggs",
  ".git",
  ".github",
  ".mypy_cache",
  ".pytest-cache",
  ".ruff_cache",
  "__pypackages__",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213", "EM102", "FBT001", "ISC001", "PLR0913"]

[tool.ruff.lint.pydocstyle]
ignore-decorators = [
  "pyfixtures.fixture",
  "pytest.fixture",
  "virtool.workflow.step",
  "virtool.workflow.workflow.Workflow.step",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN201", "ANN202", "D205", "S101", "S106"]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "virtool"

[dependency-groups]
dev = [
  "furo>=2024.8.6,<2026.0.0",
  "mypy<2.0.0,>=1.16.1",
  "pre-commit>=4.3.0",
  "pytest>=8.4.1,<10.0.0",
  "pytest-aiohttp>=1.1.0",
  "pytest-asyncio>=1.3.0",
  "pytest-mock<4.0.0,>=3.14.0",
  "pytest-profiling<2.0.0,>=1.7.0",
  "pytest-rerunfailures>=10.2,<16.0",
  "pytest-structlog<2.0,>=1.1",
  "pytest-timeout<3.0.0,>=2.4.0",
  "pytest-xdist<4.0.0,>=3.7.0",
  "ruff<1.0.0,>=0.4.1",
  "snakeviz<3.0.0,>=2.2.0",
  "sphinx<9.0.0,>=8.2.3",
  "sphinx-autobuild<2026,>=2025",
  "sphinx-autofixture<1.0.0,>=0.4.0",
  "sphinx-toolbox<5.0.0,>=4.0.0",
  "syrupy>=4.5.0,<6.0.0",
]

[virtualenvs]
in-project = true
